# py-lap-solver

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
src/cpp/batched_scipy/: README.md  batched_scipy_lap.cpp  batched_scipy_lap.h
src/cpp/bindings/: batched_scipy_bindings.cpp  lap1015_bindings.cpp
src/py_lap_solver/: __init__.py
src/py_lap_solver/solvers/: __init__.py  batched_scipy_solver.py  lap1015_solver.py  registry.py  scipy_solver.py
tests/: benchmarks.py  get_cost_matrices.py  test_solver_consistency_with_scipy.py
